[package]
name = "rot"
version = "0.1.0"
authors = ["Enrico Borba <enricozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "2.33.0", features = ["yaml"]}
colored = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
which = "4.0.2"
