[package]
name = "rot-dot"
version = "0.1.0"
authors = ["Enrico Borba <enricozb@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "2.33.0", features = ["yaml"]}
colored = "2"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
which = "4.0.2"
