[package]
name = "tittle"
version = "0.1.9"
authors = ["Enrico Borba <enricozb@gmail.com>"]
description = "Dotfile manager"
homepage = "https://github.com/enricozb/tittle"
documentation = "https://github.com/enricozb/tittle"
repository = "https://github.com/enricozb/tittle"
license-file = "LICENSE"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "2.33.0", features = ["yaml"]}
colored = "2"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
which = "4.0.2"
